# sopotek-trading-ai

./: .dockerignore  .env  .gitignore  Celery.config.py  Dockerfile  Global SaaS AI Asset Manager.md  Launch Sopotek Trading AI.cmd  OVERALL_QUANT_RISK_LAYER.md  Quant Research Stack.md  README.md  architecture.md  capitalallocation.md  docker-compose.yml  main.py  mypy.ini  pyproject.toml  requirements.txt
 src/sopotek_trading/: app.py  celery_app.py  main.py  tasks.py
.github/workflows/: ci.yml  docker-publish.yml  python-package-conda.yml  python-publish.yml
alembic/: env.py
desktop_app/: Dockerfile  Launch Sopotek Trading AI.cmd  README.md  environment.yml  main.py
desktop_app/scripts/: launch_ui.ps1
docs/: FULL_APP_GUIDE.md  api.md  architecture.md  brokers-and-modes.md  getting-started.md  mkdocs.yml  release-notes.md  strategy_docs.md  troubleshooting.md
docs/docs/: index.md
docs/site/: 404.html  index.html
scripts/: launch_ui.ps1
scripts/docker/: start_http_ui.sh
server_app/: ARCHITECTURE.md  README.md
server_app/backend/: .dockerignore  README.md  requirements.txt
server_app/docker/: docker-compose.platform.yml  platform.env.example
server_app/docs/: web-platform.md
src/: accounts.json  dowload_data.py  generate_features.py  main.py
src/agents/: signal_agent.py  signal_aggregation_agent.py  signal_consensus_agent.py  signal_engine.py  signal_fanout.py
src/backtesting/: backtest_engine.py  optimizer.py  report_generator.py  simulator.py
src/broker/: alpaca_broker.py  base_broker.py  broker_factory.py  ccxt_broker.py  market_venues.py  oanda_broker.py  paper_broker.py  stellar_broker.py
src/config/: config.py  credential_manager.py
src/core/: event_bus.py  (+3 more)
(+398 files in other folders)
